--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,4 +2,8 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 yfinance>=0.2.33
 python-dateutil==2.8.2
-requests>=2.31.0 
+requests>=2.31.0
+numpy<2.0.0
+pandas>=1.5.0,<2.1.0
+websockets>=11.0.0
+pyarrow>=10.0.0,<15.0.0 
