feat: implement comprehensive backtester functionality with pre-commit hooks
- Fixed build errors (unused imports and unescaped apostrophe)
- Added complete backtester frontend with three core features:
  * Historical backtesting with custom date ranges
  * Scenario analysis (2008 crisis, COVID-19, etc.)
  * Monte Carlo simulation with probabilistic projections
- Set up Husky pre-commit and pre-push hooks
- Added lint-staged for automatic code fixing
- Created comprehensive component architecture with proper TypeScript types
- Added mock data functions following existing patterns
- Implemented tabbed interface with proper state management

--- a/client/package.json
+++ b/client/package.json
@@ -54,8 +54,14 @@
     "eslint-config-next": "15.3.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "prettier": "^3.4.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix"
+    ]
   }
 }
