--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,11 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-yfinance>=0.2.33
-python-dateutil==2.8.2
-requests>=2.31.0
-numpy<2.0.0
-pandas>=1.5.0,<2.1.0
-websockets>=11.0.0
-pyarrow>=10.0.0,<15.0.0 
+fastapi==0.115.6
+uvicorn[standard]==0.32.1
+supabase==2.7.4
+python-dotenv==1.0.1
+yfinance>=0.2.36
+pandas>=2.2.0,<3.0.0
+numpy>=1.26.0,<2.0.0
+pydantic>=2.11.7,<3.0.0
+pydantic-settings>=2.8.0
+realtime==2.5.3
+websockets>=15.0,<16.0
