--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,5 +7,6 @@ pandas>=2.2.0,<3.0.0
 numpy>=1.26.0,<2.0.0
 pydantic>=2.11.7,<3.0.0
 pydantic-settings>=2.8.0
+email-validator>=2.1.0
 realtime==2.5.3
 websockets>=15.0,<16.0
