--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,4 @@
-SUPABASE_URL=INPUT_HERE
-SUPABASE_SERVICE_ROLE_KEY=INPUT_HERE
-SUPABASE_JWT_SECRET=INPUT_HERE
+# Supabase Configuration
+SUPABASE_URL=your_supabase_project_url
+SUPABASE_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_KEY=your_supabase_service_role_key
