--- a/server/package.json
+++ b/server/package.json
@@ -1,29 +1,27 @@
 {
   "name": "monty-server",
   "version": "1.0.0",
-  "description": "Monty Portfolio Backtester API - Node.js TypeScript Backend",
-  "main": "dist/index.js",
+  "description": "Monty API Server",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts",
-    "clean": "rm -rf dist"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "api",
+    "express",
+    "nodejs"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "zod": "^3.22.4"
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "nodemon": "^3.0.2"
   }
 }
