--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dev": "ts-node src/index.ts",
     "dev:watch": "nodemon --exec ts-node src/index.ts",
     "clean": "rm -rf dist",
+    "vercel-build": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
