Created Stock-API Service

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,32 @@ htmlcov/
 .env.development.local
 .env.test.local
 .env.production.local 
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.env
+.venv
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.git
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pytest_cache/
