--- a/stock-api/requirements.txt
+++ b/stock-api/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 yfinance==0.2.28
 pydantic==2.5.0
-python-multipart==0.0.6 
+python-multipart==0.0.6
+pandas>=2.0.0 
