--- a/stock-api/requirements.txt
+++ b/stock-api/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-yfinance==0.2.28
-pydantic==2.5.0
-python-multipart==0.0.6
-pandas>=2.0.0 
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+yfinance==0.2.65
+pydantic==2.11.7
+python-multipart==0.0.20
+pandas==2.3.1
