--- a/server/env.example
+++ b/server/env.example
@@ -10,5 +10,8 @@ PORT=3001
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# Stock API URL (required in production, optional in development)
-# STOCK_API_URL=your_stock_api_url 
+# Stock API URL (required in production, optional in development - defaults to http://localhost:8001)
+# STOCK_API_URL=your_stock_api_url
+
+# Scenario API URL (required in production, optional in development - defaults to http://localhost:8002)
+# SCENARIO_API_URL=your_scenario_api_url 
