--- a/scenario-api/requirements.txt
+++ b/scenario-api/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.116.1
 uvicorn[standard]==0.35.0
 pydantic==2.11.7
-numpy==1.24.3
-pandas==2.3.1
-scipy==1.11.1
+numpy>=1.26.0
+pandas>=2.1.0
+scipy>=1.11.0
